multi-lang-support

--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1679,55 +1679,55 @@
             <!-- Screenshot 1: AI Assistant -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/synapse-ai-assistant.png" alt="Synapse AI 助手" loading="lazy">
+                    <img src="assets/screenshots/synapse-ai-assistant.png" alt="Synapse AI Assistant" loading="lazy">
                 </div>
                 <div class="screenshot-content">
-                    <h3>AI 神经中枢</h3>
-                    <p>自然语言点单，秒懂复杂需求。AI 助手自动解析订单、识别桌号，并实时下发给后厨机器人。让服务员从繁琐的订单输入中解放，专注于提升顾客体验。</p>
+                    <h3 data-i18n="synapse.screens.item1.title">AI 神经中枢</h3>
+                    <p data-i18n="synapse.screens.item1.desc">自然语言点单，秒懂复杂需求。AI 助手自动解析订单、识别桌号，并实时下发给后厨机器人。让服务员从繁琐的订单输入中解放，专注于提升顾客体验。</p>
                 </div>
             </div>
 
             <!-- Screenshot 2: Dashboard -->
             <div class="screenshot-item fade-in-scroll reverse">
                 <div class="screenshot-content">
-                    <h3>实时仪表盘</h3>
-                    <p>一屏掌握全局运营数据。今日订单数、营业额、客单价、完成率，关键指标实时刷新。智能化数据洞察，助力精准决策。</p>
+                    <h3 data-i18n="synapse.screens.item2.title">实时仪表盘</h3>
+                    <p data-i18n="synapse.screens.item2.desc">一屏掌握全局运营数据。今日订单数、营业额、客单价、完成率，关键指标实时刷新。智能化数据洞察，助力精准决策。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="assets/screenshots/synapse-dashboard.png" alt="实时仪表盘" loading="lazy">
+                    <img src="assets/screenshots/synapse-dashboard.png" alt="Synapse Dashboard" loading="lazy">
                 </div>
             </div>
 
             <!-- Screenshot 3: Panshaker Robot Control -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/synapse-robot-control.png" alt="Panshaker 机器人控制中心" loading="lazy">
+                    <img src="assets/screenshots/synapse-robot-control.png" alt="Panshaker Robot Control" loading="lazy">
                 </div>
                 <div class="screenshot-content">
-                    <h3>Panshaker 智能炒锅</h3>
-                    <p>机器人实时状态监控，油温精准控制到 0.1°C。系统直接下发 G-Code 指令，确保每一道菜品的标准化出品。物理级库存扣减，防止超卖。</p>
+                    <h3 data-i18n="synapse.screens.item3.title">Panshaker 智能炒锅</h3>
+                    <p data-i18n="synapse.screens.item3.desc">机器人实时状态监控，油温精准控制到 0.1°C。系统直接下发 G-Code 指令，确保每一道菜品的标准化出品。物理级库存扣减，防止超卖。</p>
                 </div>
             </div>
 
             <!-- Screenshot 4: Delivery Aggregation -->
             <div class="screenshot-item fade-in-scroll reverse">
                 <div class="screenshot-content">
-                    <h3>外卖聚合平台</h3>
-                    <p>一个界面统管所有外卖订单。无缝对接 Uber Eats、DoorDash、饿了么等主流平台，告别多平板混乱。自动接单、智能调度，让外卖运营更高效。</p>
+                    <h3 data-i18n="synapse.screens.item4.title">外卖聚合平台</h3>
+                    <p data-i18n="synapse.screens.item4.desc">一个界面统管所有外卖订单。无缝对接 Uber Eats、DoorDash、饿了么等主流平台，告别多平板混乱。自动接单、智能调度，让外卖运营更高效。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="assets/screenshots/synapse-delivery-aggregation.png" alt="外卖聚合平台" loading="lazy">
+                    <img src="assets/screenshots/synapse-delivery-aggregation.png" alt="Delivery Aggregation" loading="lazy">
                 </div>
             </div>
 
             <!-- Screenshot 5: Customer Management -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/synapse-customer-management.png" alt="顾客管理系统" loading="lazy">
+                    <img src="assets/screenshots/synapse-customer-management.png" alt="Customer Management" loading="lazy">
                 </div>
                 <div class="screenshot-content">
-                    <h3>口味数字孪生</h3>
-                    <p>每位顾客都有专属口味档案。系统记录咸淡、辣度、油量等偏好，实现真正的 C2M 个性化定制。VIP 会员体系，让每次消费都是定制化体验。</p>
+                    <h3 data-i18n="synapse.screens.item5.title">口味数字孪生</h3>
+                    <p data-i18n="synapse.screens.item5.desc">每位顾客都有专属口味档案。系统记录咸淡、辣度、油量等偏好，实现真正的 C2M 个性化定制。VIP 会员体系，让每次消费都是定制化体验。</p>
                 </div>
             </div>
         </div>
