--- a/careers.html
+++ b/careers.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Panshaker Services</title>
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="any">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="16x16">
-    <link rel="apple-touch-icon" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png">
+    <title>Careers | Panshaker Services — Join Our Team</title>
+    <meta name="description"
+        content="Explore career opportunities at Panshaker Services. Join our team building the future of automated food service technology in North America.">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         body {
@@ -44,9 +46,8 @@
         }
 
         .page-banner h1 {
-            font-family: 'Smartisan Compact', sans-serif;
             font-size: 48px;
-            font-weight: normal;
+            font-weight: 300;
             margin-bottom: 20px;
             letter-spacing: 2px;
         }
@@ -408,7 +409,8 @@
     <section class="section" style="padding-top: 150px; background: #fafafa;">
         <div class="container">
             <h1
-                style="text-align: center; font-size: 36px; font-weight: 300; margin-bottom: 60px; color: #0E427E;">Join
+                style="text-align: center; font-size: 36px; font-weight: 300; margin-bottom: 60px; color: #0E427E; letter-spacing: 1px;">
+                Join
                 Our Team</h1>
 
             <div class="job-card"
@@ -427,10 +429,8 @@
                 </div>
 
                 <div class="job-description" style="margin-bottom: 40px;">
-                    <h3
-                        style="font-size: 20px; color: #333; margin-bottom: 15px;">Role Overview</h3>
-                    <p
-                        style="color: #666; margin-bottom: 20px; font-size: 16px;">
+                    <h3 style="font-size: 20px; color: #333; margin-bottom: 15px;">Role Overview</h3>
+                    <p style="color: #666; margin-bottom: 20px; font-size: 16px;">
                         Panshaker Services is seeking a dedicated Lead Field Service Technician to ensure the
                         reliability of our automated culinary systems. You will be responsible for the installation,
                         maintenance, and repair of our cutting-edge robotic wok hardware at client sites.
@@ -521,7 +521,9 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span
+                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
