--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
-    <title>Panshaker Services</title>
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="any">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="16x16">
-    <link rel="apple-touch-icon" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png">
+    <title>Panshaker Services — AI-Powered Food Automation Solutions</title>
+    <meta name="description"
+        content="Panshaker Services delivers AI-powered automated cooking solutions for North American restaurants. Low-cost hardware automation meets intelligent restaurant management.">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         /* 布局容器 */
@@ -829,7 +831,7 @@
 
             <div class="ambassador-card">
                 <div class="ambassador-img-container">
-                    <img src="assets/images/gaoleilei.png" alt="Gao Leilei"
+                    <img src="assets/images/gaoleilei.jpg" alt="Gao Leilei"
                         style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
                 </div>
                 <div class="ambassador-text">
@@ -884,7 +886,9 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span
+                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
