--- a/investors.html
+++ b/investors.html
@@ -4,148 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
-    <title>Panshaker Services</title>
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="any">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="16x16">
-    <link rel="apple-touch-icon" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png">
+    <title>Investor Relations | Panshaker Services</title>
+    <meta name="description"
+        content="Panshaker Services investor relations — stay updated on our journey to revolutionize North American food automation.">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <!-- Same styles -->
     <style>
-        @font-face {
-            font-family: 'LogoFont';
-            src: url('assets/fonts/logo.otf') format('opentype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        @font-face {
-            font-family: 'Smartisan Compact';
-            src: url('assets/fonts/Smartisan_Compact-Regular.ttf') format('truetype');
-            font-weight: 400;
-            font-style: normal;
-            font-display: swap;
-        }
-
-        @font-face {
-            font-family: 'Smartisan Compact';
-            src: url('assets/fonts/Smartisan_Compact-Medium.ttf') format('truetype');
-            font-weight: 500;
-            font-style: normal;
-            font-display: swap;
-        }
-
-        @font-face {
-            font-family: 'Smartisan Compact';
-            src: url('assets/fonts/Smartisan_Compact-Bold.ttf') format('truetype');
-            font-weight: 700;
-            font-style: normal;
-            font-display: swap;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        /* Page-specific styles only — base/fonts from shared.css */
         body {
-            font-family: 'Smartisan Compact', -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif;
             color: #333;
             background-color: #fcfcfc;
             line-height: 1.8;
-            overflow-x: hidden;
-        }
-
-        a {
-            text-decoration: none;
-            color: inherit;
-            transition: all 0.3s;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        /* Header */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 80px;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            z-index: 1000;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
-        }
-
-        .nav-inner {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 100%;
-        }
-
-        /* Logo */
-        .logo {
-            position: relative;
-            height: 32px;
-            overflow: hidden;
-            cursor: pointer;
-        }
-
-        .logo-en,
-        .logo-cn {
-            transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.4s ease;
-            display: flex;
-            align-items: center;
-        }
-
-        .logo-cn {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform: translateY(100%);
-            opacity: 0;
-        }
-
-        @media (min-width: 769px) {
-            .logo.hovered .logo-en {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-
-            .logo.hovered .logo-cn {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .logo.clicked .logo-en {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-
-            .logo.clicked .logo-cn {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .nav-links a {
-            margin-left: 40px;
-            font-size: 14px;
-            color: #666;
-            font-weight: 500;
-        }
-
-        .nav-links a:hover {
-            color: #62BA46;
         }
 
         /* Egg Content */
@@ -265,7 +138,9 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
+                <span
+                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
         </div>
