--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
-    <title>Panshaker Services</title>
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="any">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png" sizes="16x16">
-    <link rel="apple-touch-icon" href="Gemini_Generated_Image_1tijci1tijci1tij-Photoroom.png">
+    <title>About Us | Panshaker Services — Innovation Meets Automation</title>
+    <meta name="description"
+        content="Learn about Panshaker Services — a leader in North American food automation, combining industrial-grade hardware with AI-powered systems to revolutionize the restaurant industry.">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         /* 全局样式 - 补充页面自定义 */
@@ -49,9 +51,8 @@
         }
 
         .page-banner h1 {
-            font-family: 'Smartisan Compact', sans-serif;
             font-size: 44px;
-            font-weight: normal;
+            font-weight: 300;
             color: #fff;
             /* White Text */
             margin-bottom: 20px;
@@ -373,7 +374,9 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span
+                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
