--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
         .page-banner h1 {
             font-size: 44px;
-            font-weight: 300;
+            font-weight: 700;
             color: #fff;
             /* White Text */
             margin-bottom: 20px;
@@ -285,7 +285,6 @@
     <div class="page-banner">
         <div class="container">
             <h1 data-i18n="about.banner.title">公司信息</h1>
-            <p data-i18n="about.banner.subtitle">Innovation Meets Automation</p>
         </div>
     </div>
 
@@ -375,7 +374,7 @@
             </div>
             <div class="copyright">
                 <span
-                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    style="font-size: 14px; vertical-align: baseline;">©</span><span
                     data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
