--- a/careers.html
+++ b/careers.html
@@ -408,10 +408,9 @@
 
     <section class="section" style="padding-top: 150px; background: #fafafa;">
         <div class="container">
-            <h1
-                style="text-align: center; font-size: 36px; font-weight: 300; margin-bottom: 60px; color: #0E427E; letter-spacing: 1px;">
-                Join
-                Our Team</h1>
+            <h1 data-i18n="careers.heading"
+                style="text-align: center; font-size: 36px; font-weight: 700; margin-bottom: 60px; color: #0E427E; letter-spacing: 1px;">
+                Careers</h1>
 
             <div class="job-card"
                 style="background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); max-width: 900px; margin: 0 auto;">
@@ -522,7 +521,7 @@
             </div>
             <div class="copyright">
                 <span
-                    style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span
+                    style="font-size: 14px; vertical-align: baseline;">©</span><span
                     data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
