--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1331,7 +1331,7 @@
                     <span
                         style="font-family: 'LogoFont', sans-serif; color: rgba(98, 186, 70, 0.9); margin-left: 6px; letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">Services</span>
                     <sup
-                        style="font-size: 10px; margin-left: 2px; font-family: sans-serif; color: #a1a1a6; font-weight: 400;">™</sup>
+                        style="font-size: 10px; margin-left: 2px; color: #a1a1a6; font-weight: 400;">™</sup>
                 </div>
                 <p data-i18n="synapse.hero.build" style="font-size: 18px; font-weight: 400; color: #a1a1a6; margin: 0;">
                     打造</p>
@@ -1627,7 +1627,7 @@
             <article class="tier-card tier-gold">
                 <div style="position: relative; z-index: 5;">
                     <span class="tagline">The Brain</span>
-                    <h2>Synapse OS Gold<sup style="font-size: 0.5em; margin-left: 2px; font-family: sans-serif;">™</sup>
+                    <h2>Synapse OS Gold<sup style="font-size: 0.5em; margin-left: 2px;">™</sup>
                     </h2>
                     <p data-i18n="synapse.tier.gold.desc">极致个性化的 C2M 引擎 - 口味数字孪生系统</p>
                     <div class="demo-link">
@@ -1643,7 +1643,7 @@
             <article class="tier-card tier-standard">
                 <div style="max-width: 700px;">
                     <span class="tier-tagline">The Hand</span>
-                    <h2>Synapse OS<sup style="font-size: 0.5em; margin-left: 2px; font-family: sans-serif;">™</sup></h2>
+                    <h2>Synapse OS<sup style="font-size: 0.5em; margin-left: 2px;">™</sup></h2>
                     <p data-i18n="synapse.tier.standard.desc">自动化餐厅的标准配置。机器人中控直接下发 G-Code 指令，精准控制油温与翻炒。</p>
                     <div class="demo-link">
                         <a href="#demo"
@@ -1974,7 +1974,7 @@
             <div style="border-top: 1px solid #d2d2d7; padding-top: 20px; text-align: center;">
                 <p style="font-size: 12px; color: #86868b;">
                     <span
-                        style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span>
+                        style="font-size: 14px; vertical-align: baseline;">©</span>
                     <span data-i18n="synapse.footer.copyright">2026 Synapse OS. All rights reserved.</span>
                 </p>
                 <p style="font-size: 12px; color: #86868b; margin-top: 10px;">
