--- a/index.html
+++ b/index.html
@@ -566,19 +566,15 @@
 
     <header>
         <div class="container nav-inner">
-            <div class="logo" onmouseenter="this.classList.add('hovered')"
-                onmouseleave="this.classList.remove('hovered')" onclick="this.classList.toggle('clicked')">
-                <div class="logo-en">
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: #0E427E; letter-spacing: -1px;">Panshaker</span><span
-                        style="font-family: 'LogoFont', sans-serif; color: #62BA46; margin-left: 6px; letter-spacing: -1px;">Services</span>
-                </div>
-                <div class="logo-cn">
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: #0E427E; letter-spacing: -1px;">伴勺</span><span
-                        style="font-family: 'LogoFont', sans-serif; color: #62BA46; margin-left: 6px; letter-spacing: -1px;">科技</span>
-                </div>
-            </div>
+            <a href="index.html" class="logo">
+                <picture>
+                    <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
+                    <img src="assets/logo/panshaker-logo.png"
+                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                         alt="Panshaker Services"
+                         class="logo-img">
+                </picture>
+            </a>
             <nav class="nav-links">
                 <a href="#" data-i18n="nav.home">首页</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">Synapse OS</a>
