--- a/profile_xu.html
+++ b/profile_xu.html
@@ -12,14 +12,6 @@
     <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
-        /* --- 字体定义 --- */
-        @font-face {
-            font-family: 'LogoFont';
-            src: url('assets/fonts/logo.otf') format('opentype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         /* 全局样式 */
         * {
             margin: 0;
@@ -71,53 +63,6 @@
             justify-content: space-between;
             align-items: center;
             height: 100%;
-        }
-
-        /* Logo */
-        .logo {
-            position: relative;
-            height: 32px;
-            overflow: hidden;
-            cursor: pointer;
-        }
-
-        .logo-en,
-        .logo-cn {
-            transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.4s ease;
-            display: flex;
-            align-items: center;
-        }
-
-        .logo-cn {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform: translateY(100%);
-            opacity: 0;
-        }
-
-        @media (min-width: 769px) {
-            .logo.hovered .logo-en {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-
-            .logo.hovered .logo-cn {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .logo.clicked .logo-en {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-
-            .logo.clicked .logo-cn {
-                transform: translateY(0);
-                opacity: 1;
-            }
         }
 
         .nav-links a {
@@ -237,19 +182,15 @@
 
     <header>
         <div class="container nav-inner">
-            <div class="logo" onmouseenter="this.classList.add('hovered')"
-                onmouseleave="this.classList.remove('hovered')" onclick="this.classList.toggle('clicked')">
-                <div class="logo-en">
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: #0E427E; letter-spacing: -1px;">Panshaker</span><span
-                        style="font-family: 'LogoFont', sans-serif; color: #62BA46; margin-left: 6px; letter-spacing: -1px;">Services</span>
-                </div>
-                <div class="logo-cn">
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: #0E427E; letter-spacing: -1px;">伴勺</span><span
-                        style="font-family: 'LogoFont', sans-serif; color: #62BA46; margin-left: 6px; letter-spacing: -1px;">科技</span>
-                </div>
-            </div>
+            <a href="index.html" class="logo">
+                <picture>
+                    <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
+                    <img src="assets/logo/panshaker-logo.png"
+                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                         alt="Panshaker Services"
+                         class="logo-img">
+                </picture>
+            </a>
             <nav class="nav-links">
                 <a href="index.html" data-i18n="nav.home">首页</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
