--- a/synapse_os.html
+++ b/synapse_os.html
@@ -61,13 +61,6 @@
             font-display: swap;
         }
 
-        @font-face {
-            font-family: 'LogoFont';
-            src: url('assets/fonts/logo.otf') format('opentype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         /* Base Reset & Vars */
         :root {
             --brand-blue: #0E427E;
@@ -139,11 +132,17 @@
         }
 
         .logo {
-            font-size: 24px;
-            font-weight: bold;
-            cursor: pointer;
             display: flex;
             align-items: center;
+            height: 32px;
+            flex-shrink: 0;
+            text-decoration: none;
+        }
+
+        .logo .logo-img {
+            height: 18px;
+            width: auto;
+            display: block;
         }
 
         .nav-links a {
@@ -1297,11 +1296,15 @@
 
     <header>
         <div class="nav-inner">
-            <div class="logo">
-                <span style="font-family:'LogoFont'; color:var(--brand-blue); letter-spacing: -1px;">Panshaker</span>
-                <span
-                    style="font-family:'LogoFont'; color:var(--brand-green); margin-left: 6px; letter-spacing: -1px;">Services</span>
-            </div>
+            <a href="index.html" class="logo">
+                <picture>
+                    <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
+                    <img src="assets/logo/panshaker-logo.png"
+                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                         alt="Panshaker Services"
+                         class="logo-img">
+                </picture>
+            </a>
             <nav class="nav-links">
                 <a href="#products" data-i18n="synapse.nav.products">产品</a>
                 <a href="#features" data-i18n="synapse.nav.features">功能特性</a>
@@ -1325,11 +1328,14 @@
             <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 30px;">
                 <p data-i18n="synapse.hero.for" style="font-size: 18px; font-weight: 400; color: #a1a1a6; margin: 0;">专为
                 </p>
-                <div style="display: inline-flex; align-items: baseline;">
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: rgba(14, 66, 126, 0.9); letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">Panshaker</span>
-                    <span
-                        style="font-family: 'LogoFont', sans-serif; color: rgba(98, 186, 70, 0.9); margin-left: 6px; letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">Services</span>
+                <div style="display: inline-flex; align-items: center;">
+                    <picture>
+                        <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
+                        <img src="assets/logo/panshaker-logo.png"
+                             srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                             alt="Panshaker Services"
+                             style="height: 20px; width: auto; filter: brightness(0) invert(1);">
+                    </picture>
                     <sup
                         style="font-size: 10px; margin-left: 2px; color: #a1a1a6; font-weight: 400;">™</sup>
                 </div>
