--- a/careers.html
+++ b/careers.html
@@ -395,8 +395,9 @@
             </a>
             <nav class="nav-links">
                 <a href="index.html" data-i18n="nav.home">首页</a>
+                <a href="x7_ai.html" data-i18n="nav.x7_ai">X7-AI机器人</a>
+                <a href="synapse_os.html" data-i18n="nav.synapse">Synapse OS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
-                <a href="#" data-i18n="nav.silent_kitchen">无声厨房</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
