--- a/index.html
+++ b/index.html
@@ -751,10 +751,10 @@
         <div class="container-wide">
             <div class="split-section">
                 <div class="split-text">
-                    <h3 data-i18n="home.solution.price_title">竞品价格 1/2</h3>
+                    <h3 data-i18n="home.solution.price_title">X7-AI炒菜机器人</h3>
                     <p data-i18n-html="home.solution.price_desc"
-                        style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">&lt; 2周
-                        低成本改装<br>实现无人化烹饪</p>
+                        style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">竞品价格
+                        1/2<br>&lt; 2周 低成本改装<br>实现无人化烹饪</p>
                 </div>
                 <!-- Hardware Image Area -->
                 <div class="split-img" style="background: transparent; padding: 0; overflow: hidden;">
